Public/CSS/style.css
div.main {
    width: 1500px;
    margin: 0 auto;
}
header {
    margin: 20px;
}
li {
    text-decoration: none;
}
table {
    width: 1500px;
}

form {
    width: 1500px;
    margin: 0 auto;
    text-align: left;
    margin-top: 50px;
    margin-bottom: 50px;
}
input {
    margin: 0 5px;
}
.columnHeadings {
    margin: 10px 10px;
}
button#form_submit {
    margin: 20px 0;
}
div#save_status {
    margin: 20px 0;
    color: green;
}

